# POC

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Coding Rules.md  README.md  UA-simulation.py  agtTypPoint.h  agtgpcircle.cpp  agtgpcircle.h  agtgpdot.cpp  agtgpdot.h  agtgpline.cpp  agtgpline.h  agtgprectangle.cpp  agtgprectangle.h  line.h  opengl.cpp  pch.h  point.cpp
.github/workflows/: cmake.yml  codeql.yml
diagram/: agata.gliffy
opengl/: CMakeLists.txt
opengl/Debug/: opengl.ilk
opengl/opengl/: CMakeLists.txt  line.cpp  opengl.cpp  opengl.vcxproj  opengl.vcxproj.filters  point.h  rectangle.cpp  rectangle.h
opengl/opengl/Debug/: opengl.pch  vc141.idb
opengl/opengl/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl/opengl/x64/Debug/: opengl.pch
opengl/opengl/x64/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  opengl.lastbuildstate
src/: .clang-format  .gitignore  CMakeLists.txt  agtTypColor.cpp  agtTypColor.h  agtTypPoint.cpp  agtTypPoint.h  agtgpcircle.cpp  agtgpcircle.h  agtgpdot.cpp  agtgpdot.h  agtgpline.cpp  agtgpline.h  agtgprectangle.cpp  agtgprectangle.h  agtgraphicprimitiveifc.h  agtmessagebroker.cpp  agtmessagebroker.h  agtobjecttree.cpp  agtobjecttree.h  main.cpp  tree.h
